docs: create readme file
