# Go/docs/swagger.json
@@ -7,7 +7,7 @@
     "paths": {
         "/invoices": {
             "get": {
-                "description": "set date_from and date_to to get profit_total and cash_transaction_total.\\nif date_from is set, pagination will be ignored for profit calculation.",
+                "description": "set date_from and date_to to get profit_total and cash_transaction_total.\\nif date_from and date_to is set, pagination will be ignored for profit calculation.",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,13 +21,13 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "DD-MM-YYYY, fill up date_from and date_to to get profit_total and cash_transaction_total. WARNING: if date_from is set, pagination will be ignored for profit calculation.",
+                        "description": "DD-MM-YYYY, fill up date_from and date_to to get profit_total and cash_transaction_total. WARNING: if set, pagination will be ignored for profit calculation.",
                         "name": "date_from",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "DD-MM-YYYY, fill up date_from and date_to to get profit_total and cash_transaction_total",
+                        "description": "DD-MM-YYYY, fill up date_from and date_to to get profit_total and cash_transaction_total. WARNING: if set, pagination will be ignored for profit calculation.",
                         "name": "date_to",
                         "in": "query"
                     },
@@ -272,7 +272,36 @@
                     }
                 }
             },
-            "put": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "invoice"
+                ],
+                "summary": "delete invoice",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "invoice uuid",
+                        "name": "invoice_uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseJSONResp"
+                        }
+                    }
+                }
+            },
+            "patch": {
                 "consumes": [
                     "application/json"
                 ],
@@ -318,35 +347,6 @@
                                     }
                                 }
                             ]
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "invoice"
-                ],
-                "summary": "delete invoice",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "invoice uuid",
-                        "name": "invoice_uuid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.BaseJSONResp"
                         }
                     }
                 }
